minor UI changes

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     </div>
 
-
+<footer><div>Created By Daniel Arcos</div></footer>
 </body>
 
 <script src = 'script.js' type = 'module'></script>
